# mcp-yahoo-fantasy

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: publish.yml
scripts/: debug.sh  setup.sh
yahoo/: LICENSE  README.md  pyproject.toml
yahoo/src/yahoo/: __init__.py  auth.py  client.py  login.py  server.py
