[project]
name = "mcp-yahoo-fantasy"
version = "0.1.0"
description = "An MCP server for Yahoo Fantasy Sports (read + write)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michael DeMarco", email = "michaelfromyeg@gmail.com" }]
keywords = ["mcp", "yahoo", "fantasy", "sports", "nfl", "nhl", "nba", "mlb"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.4.0",
    "yahoo-fantasy-api>=2.9.0",
    "yahoo-oauth>=2.0",
]

[project.urls]
Homepage = "https://github.com/michaelfromorg/mcp-yahoo-fantasy"
Repository = "https://github.com/michaelfromorg/mcp-yahoo-fantasy"
Issues = "https://github.com/michaelfromorg/mcp-yahoo-fantasy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo"]

[project.scripts]
yahoo = "yahoo:main"
yahoo-login = "yahoo.login:main"
